--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <meta charset="UTF-8">
         <title>NoMirar, graphic &amp; web design studio</title>
-        <link rel="stylesheet" type="text/css"  href="04-bootstrap/css/bootstrap.css"/>
+        <link rel="stylesheet" type="text/css"  href="04-bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css"  href="01-css/index.css"/>  
     </head>
 
@@ -29,7 +29,7 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
+                        <div class="col-xs-12 col-xs-offset-0 col-sm-12 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
                             <div class="header">
                                 <p class="n txt anim-text-flow">N</p>
                                 <p class="o txt anim-text-flow">O</p>
@@ -52,123 +52,119 @@
 
         <div class="projets container-fluid">
             <div class="row">
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
-                            <h2>Projets &#172;</h2>
-                        </div>
-                        <!--                        </div>-->
+                <h2>Projets &#172;</h2>
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-lg-offset-8">
+
+                    <div class="project-1">
+                        <p><a><img class="image-preview1 img-responsive" src="03-images/gradient-books.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés">
+                            <img class="image-hover1 img-responsive" src="03-images/gradient-books-hover.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés"><span class="span1">Patterns in Vegas</span></a></p>
                     </div>
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <div class="col-xs-12 col-sm-8 col-sm-offset-4 col-md-8 col-md-offset-4 col-lg-9 col-lg-offset-3">
-                            <div class="project-1">
-                                <p><a><img class="image-preview1 img-responsive" src="03-images/gradient-books.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés">
-                                    <img class="image-hover1 img-responsive" src="03-images/gradient-books-hover.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés"><span class="span1">Patterns in Vegas</span></a></p>
-                            </div>
-                        </div>
-                    </div>
+                </div>
+            </div>
 
-               <!--     <div class="row">
-                        <div class="col-xs-6 col-xs-offset-6 col-md-10 col-md-offset-2">
-                            <div class="project-2">
 
-                                <p><a><img class="image-preview2 img-responsive" src="03-images/created.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique">
-                                    <img class="image-hover2 img-responsive" src="03-images/created-hover.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique"><span class="span2">Created_201</span></a></p>
-                            </div>
-                        </div>
-                    </div> -->
-
-<!--
-                    <div class="row">
-                        <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8">
-                            <div class="project-3">
-                                <p><a><img  class="image-preview3 img-responsive" src="03-images/plaknplay.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><img class="image-hover3 img-responsive" src="03-images/plaknplay-hover.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><span class="span3">Plak'n'Play</span></a></p>
-                            </div>
-                        </div>
-                   </div>-->
-
-                   <!-- <div class="row">
-                        <div class="col-xs-6 col-xs-offset-6 col-md-9 col-md-offset-3">
-                            <div class="project-4">
-                                <p><a><img class="image-preview4 img-responsive" src="03-images/alex.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014">
-                                    <img class="image-hover4 img-responsive" src="03-images/alex-hover.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014"><span class="span4">Alex Lis</span></a></p>
-                            </div>
-                        </div>
-                    </div> -->
-                    
-                  <!--  <div class="row">
-                        <div class="col-xs-6 col-xs-offset-6 col-md-5 col-md-offset-7">
-                            <div class="project-5">
-                                <p><a><img class="image-preview5 img-responsive" src="03-images/com.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><img class="image-hover5 img-responsive" src="03-images/com-hover.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><span class="span5">Comunik</span></a></p>
-                            </div>
-                        </div>
-                    </div> -->
-
-                  <!--  <div class="row">
-                        <div class="col-xs-10 col-xs-offset-2">
-                            <div class="project-6">
-                                <p><a><img class="image-preview6 img-responsive" src="03-images/yuka.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><img class="image-hover6 img-responsive" src="03-images/yuka-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span6">Yuka Font</span></a></p>
-                            </div>
-                        </div>
-                    </div> -->
-                    
-               <!--     <div class="row">
-                        <div class="col-xs-4 col-xs-offset-8">
-                            <div class="project-7">
-                                <p><a><img class="image-preview7 img-responsive" src="03-images/expe.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px">
-                                    <img class="image-hover7 img-responsive"  src="03-images/expe-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span7">Expérimentations</span></a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-            </div> -->
-
-        <div class="description container-fluid">
             <div class="row">
-                <div class="col-xs-6">
-                    <div class="col-xs-11 col-xs-offset-1">
-                        <h2 class="titrepropos">&#192; Propos &#172;</h2>
+                <div class="col-xs-6 col-xs-offset-6 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2">
+                    <div class="project-2">
+                        <p><a><img class="image-preview2 img-responsive" src="03-images/created.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique">
+                            <img class="image-hover2 img-responsive" src="03-images/created-hover.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique"><span class="span2">Created_201</span></a></p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-8 col-sm-offset-4">
-                    <div id="perspective">
-                        <div id="tilter">Dirigé par Mélysa Bojama, NoMirar est un studio de création pluridisciplinaire fondé en 2016 et basé à Besançon. Orienté dans la création graphique et web, il saura répondre au mieux à vos attentes. <br/> N'hésitez pas à écrire pour toute collaboration, renseignements ou juste pour dire bonjour ! </div></div>
-                </div>
-            </div>
-        </div>
+            </div> 
 
-
-        <!-- DIV CACHÉE DU PREMIER PROJET-->
-
-
-       <!-- <div class="lightbox">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="col-xs-11">
-                            <h3 class="patterntitle">Patterns In Vegas</h3>
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-6">
-                        <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-                            <div class="patterntxt">
-                                <p>
-                                    Patterns In Vegas est la conception de 5 ouvrages uniques traduisant les émotions du livre "Las Vegas Parano" écrit pas Hunter S. Thompson en 1971.
-                                </p>
-                                <p>
-                                    Après avoir créé une grille universelle et relevé 7 émotions ressenties par les deux personnages principaux, un motif caractéristique de l'émotion en question est associé à une couleur symbolique puis sérigraphié sur le livre d'origine. </p>
-
-                                <p>
-                                    Un second volume a été entièrement créé afin de laisser les motifs raconter l'histoire.
-                                    Trois autres volumes ont été sérigraphiés en dégradé sur tranche afin de faire office de résumé de l'ouvrage.
-                                </p>
-                            </div>
-                        </div>
+            <div class="row">
+                <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8 col-lg-5 col-lg-offset-7">
+                    <div class="project-3">
+                        <p><a><img  class="image-preview3 img-responsive" src="03-images/plaknplay.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><img class="image-hover3 img-responsive" src="03-images/plaknplay-hover.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><span class="span3">Plak'n'Play</span></a></p>
                     </div>
                 </div>
             </div>
-        </div>
+
+            <div class="row">
+                <div class="col-xs-6 col-xs-offset-6 col-md-9 col-md-offset-3 col-lg-10 col-lg-offset-2">
+
+                    <div class="project-4">
+                        <p><a><img class="image-preview4 img-responsive" src="03-images/alex.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014">
+                            <img class="image-hover4 img-responsive" src="03-images/alex-hover.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014"><span class="span4">Alex Lis</span></a></p>
+                    </div>
+
+                </div>
+            </div> 
+
+            <div class="row">
+                <div class="col-xs-6 col-xs-offset-6 col-md-5 col-md-offset-7 col-lg-4 col-lg-offset-8">
+                    <div class="project-5">
+                        <p><a><img class="image-preview5 img-responsive" src="03-images/com.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><img class="image-hover5 img-responsive" src="03-images/com-hover.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><span class="span5">Comunik</span></a></p>
+                    </div>
+                </div>
+            </div> 
+
+            <div class="row">
+                <div class="col-lg-9 col-lg-offset-3">
+                    <div class="project-6">
+                        <p><a><img class="image-preview6 img-responsive" src="03-images/yuka.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><img class="image-hover6 img-responsive" src="03-images/yuka-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span6">Yuka Font</span></a></p>
+                    </div>
+                </div>
+            </div> 
+
+            <!--     <div class="row">
+<div class="col-xs-4 col-xs-offset-8">
+<div class="project-7">
+<p><a><img class="image-preview7 img-responsive" src="03-images/expe.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px">
+<img class="image-hover7 img-responsive"  src="03-images/expe-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span7">Expérimentations</span></a></p>
+</div>
+</div>
+</div>
+</div> -->
+        </div> 
+
+        <!--<div class="description container-fluid">
+<div class="row">
+<div class="col-xs-6">
+<div class="col-xs-11 col-xs-offset-1">
+<h2 class="titrepropos">&#192; Propos &#172;</h2>
+</div>
+</div>
+<div class="col-xs-12 col-sm-8 col-sm-offset-4">
+<div id="perspective">
+<div id="tilter">Dirigé par Mélysa Bojama, NoMirar est un studio de création pluridisciplinaire fondé en 2016 et basé à Besançon. Orienté dans la création graphique et web, il saura répondre au mieux à vos attentes. <br/> N'hésitez pas à écrire pour toute collaboration, renseignements ou juste pour dire bonjour ! </div></div>
+</div>
+</div>
+</div>
+
+
+<!-- DIV CACHÉE DU PREMIER PROJET-->
+
+
+        <!-- <div class="lightbox">
+<div class="container-fluid">
+<div class="row">
+<div class="col-md-6">
+<div class="col-xs-11">
+<h3 class="patterntitle">Patterns In Vegas</h3>
+</div>
+</div>
+
+
+<div class="col-md-6">
+<div class="col-xs-12 col-sm-4 col-sm-offset-4">
+<div class="patterntxt">
+<p>
+Patterns In Vegas est la conception de 5 ouvrages uniques traduisant les émotions du livre "Las Vegas Parano" écrit pas Hunter S. Thompson en 1971.
+</p>
+<p>
+Après avoir créé une grille universelle et relevé 7 émotions ressenties par les deux personnages principaux, un motif caractéristique de l'émotion en question est associé à une couleur symbolique puis sérigraphié sur le livre d'origine. </p>
+
+<p>
+Un second volume a été entièrement créé afin de laisser les motifs raconter l'histoire.
+Trois autres volumes ont été sérigraphiés en dégradé sur tranche afin de faire office de résumé de l'ouvrage.
+</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 -->
 
 
