--- a/OrganicShapeAnimations/index.html
+++ b/OrganicShapeAnimations/index.html
@@ -73,7 +73,7 @@
                     <span class="item__title">Alexander Lis</span>
                 </div>
 
-                <div class="item item--style-5" data-animation-path-duration="3000" data-animation-path-easing="easeInOutQuint" data-path-rotate="90" data-morph-path="M 368.1,46.42 C 461,96.69 473.7,266.2 422.3,358.4 379.1,436 259.6,484.8 175,457.5 107.5,435.7 12.65,329.8 60.93,277.7 95.18,240.8 154,379.3 194.2,348.9 250.7,306 116,204.1 148.4,140.9 184.8,70.02 298,8.455 368.1,46.42 Z" data-animation-image-duration="3000" data-animation-image-easing="easeInOutQuint" data-image-rotate="-30"  data-animation-deco-duration="3000" data-animation-deco-easing="easeOutQuint">
+                <div class="item" data-animation-path-duration="3000" data-animation-path-easing="easeInOutQuint" data-path-rotate="90" data-morph-path="M 368.1,46.42 C 461,96.69 473.7,266.2 422.3,358.4 379.1,436 259.6,484.8 175,457.5 107.5,435.7 12.65,329.8 60.93,277.7 95.18,240.8 154,379.3 194.2,348.9 250.7,306 116,204.1 148.4,140.9 184.8,70.02 298,8.455 368.1,46.42 Z" data-animation-image-duration="3000" data-animation-image-easing="easeInOutQuint" data-image-rotate="-30"  data-animation-deco-duration="3000" data-animation-deco-easing="easeOutQuint">
                     <svg class="item__svg" width="500px" height="500px" viewBox="0 0 500 500">
                         <clipPath id="clipShape5">
                             <path class="item__clippath" d="M 451.5,185.8 C 441.5,266.2 339.6,305 272.3,350.2 207.7,393.6 226.7,444.7 182.6,447.9 132.8,451.4 83.97,399.9 66.37,353.1 34.6,268.4 41.16,141.8 112,85.44 186.1,26.33 313.8,54.1 396,101.4 425.2,118.2 455.6,152.4 451.5,185.8 Z" />
@@ -83,55 +83,31 @@
                             <image class="item__img" xlink:href="03-images/5-bis.png" x="0" y="0" height="500px" width="500px" />
                         </g>
                     </svg>
-                    <span class="item__title">Comunik</span>
+                    <span class="span5">Comunik</span>
                 </div>
 
-                <div class="item item--style-6" data-animation-path-duration="2000" data-path-scaleX="0.7" data-path-scaleY="0.7" data-path-rotate="25" data-morph-path="M 279.8,41.26 C 332.2,40.04 397.1,40.63 432.5,79.42 470.9,121.7 455.7,191.8 458.3,249 460.6,300.4 481.9,363.6 448.9,403.1 402.7,458.2 311.1,450.1 239.3,453.9 183.9,456.9 113.3,471.5 74.23,432.1 18.97,376.3 29.82,251.5 45.32,198.4 59.64,149.2 95.01,111.8 134.9,84.73 176.6,56.36 229.4,42.43 279.8,41.26 Z" data-animation-image-duration="2000" data-animation-image-easing="easeOutExpo" data-image-translateY="-30" data-image-scaleX="0.9" data-image-scaleY="0.9">
+                <div class="item" data-animation-path-duration="2000" data-path-scaleX="0.7" data-path-scaleY="0.7" data-path-rotate="25" data-morph-path="M 279.8,41.26 C 332.2,40.04 397.1,40.63 432.5,79.42 470.9,121.7 455.7,191.8 458.3,249 460.6,300.4 481.9,363.6 448.9,403.1 402.7,458.2 311.1,450.1 239.3,453.9 183.9,456.9 113.3,471.5 74.23,432.1 18.97,376.3 29.82,251.5 45.32,198.4 59.64,149.2 95.01,111.8 134.9,84.73 176.6,56.36 229.4,42.43 279.8,41.26 Z" data-animation-image-duration="2000" data-animation-image-easing="easeOutExpo" data-image-translateY="-30" data-image-scaleX="0.9" data-image-scaleY="0.9">
                     <svg class="item__svg" width="500px" height="500px" viewBox="0 0 500 500">
                         <clipPath id="clipShape6">
                             <path class="item__clippath" d="M 274.4,32.13 C 328.5,36.28 249,139.7 287.7,192.8 326.3,245.9 483.3,248.4 459,295 434.9,341.2 341.4,267.6 298,297.5 247.4,332.3 296,461.4 233.9,467.8 177.2,473.8 214.2,326.3 176,268.3 137.8,210.5 24.39,242.4 39.89,189.3 54.21,140.1 142,158.9 184.6,129.2 221.1,103.9 229.3,28.68 274.4,32.13 Z" />
                         </clipPath>
-                        <!--
-<g class="item__deco">
-<use xlink:href="#deco6" />
-</g>
--->
                         <g clip-path="url(#clipShape6)">
                             <image class="item__img" xlink:href="img/6.png" x="0" y="0" height="500px" width="500px" />
                         </g>
                     </svg>
-                    <div class="item__meta">
-                        <div class="item__number">
-                            <span class="item__specimen">18</span>
-                            <span class="item__reference">XC5</span>
-                        </div>
-                        <h2 class="item__title">Callithamniella capensis</h2>
-                        <h3 class="item__subtitle">Exoplanet Kepler-298d</h3>
-                    </div>
+                    <span class="span5">Yuka</span>
                 </div>
 
-                <div class="item item--style-7" data-animation-path-duration="2500" data-animation-path-easing="easeOutExpo" data-path-rotate="10" data-path-scaleX="0.5" data-morph-path="M 251.1,32.08 C 320.8,39.34 403.4,70.51 435.8,132.7 476.2,210.5 460.8,325.2 406.4,394 360.4,452.2 271,467.5 196.8,469.3 144.1,470.5 65.63,471.7 45.51,423 17.77,355.8 140.2,302.9 148.3,230.6 154.4,177.4 80.17,122.4 106.2,75.55 130.7,31.47 200.9,26.86 251.1,32.08 Z" data-animation-image-duration="1500" data-animation-image-easing="easeOutCubic" data-image-rotate="-30" data-animation-deco-duration="1500" data-animation-deco-easing="easeOutExpo" data-deco-scaleX="0.7" data-deco-translateX="-100" data-deco-translateY="-100" data-deco-rotate="50">
+                <div class="item" data-animation-path-duration="2500" data-animation-path-easing="easeOutExpo" data-path-rotate="10" data-path-scaleX="0.5" data-morph-path="M 251.1,32.08 C 320.8,39.34 403.4,70.51 435.8,132.7 476.2,210.5 460.8,325.2 406.4,394 360.4,452.2 271,467.5 196.8,469.3 144.1,470.5 65.63,471.7 45.51,423 17.77,355.8 140.2,302.9 148.3,230.6 154.4,177.4 80.17,122.4 106.2,75.55 130.7,31.47 200.9,26.86 251.1,32.08 Z" data-animation-image-duration="1500" data-animation-image-easing="easeOutCubic" data-image-rotate="-30" data-animation-deco-duration="1500" data-animation-deco-easing="easeOutExpo" data-deco-scaleX="0.7" data-deco-translateX="-100" data-deco-translateY="-100" data-deco-rotate="50">
                     <svg class="item__svg" width="500px" height="500px" viewBox="0 0 500 500">
                         <clipPath id="clipShape7">
                             <path class="item__clippath" d="M 280.1,34.42 C 465.8,29.89 514.6,354 417.3,392.3 318.9,423.2 332.3,114.7 233.3,143.6 134,172.6 294.3,390.5 212,453.2 174.8,481.6 106.3,459.6 74.54,425.3 21.22,367.7 30.13,244.7 45.63,191.6 59.95,142.4 95.32,105 135.2,77.89 176.9,49.52 229.9,29.96 280.1,34.42 Z" />
                         </clipPath>
-                        <!--
-<g class="item__deco">
-<use xlink:href="#deco7" />
-</g>
--->
                         <g clip-path="url(#clipShape7)">
                             <image class="item__img" xlink:href="img/7.png" x="0" y="0" height="500px" width="500px" />
                         </g>
                     </svg>
-                    <div class="item__meta">
-                        <div class="item__number">
-                            <span class="item__specimen">27</span>
-                            <span class="item__reference">UZ4</span>
-                        </div>
-                        <h2 class="item__title">Cheilosporum cultratum</h2>
-                        <h3 class="item__subtitle">Exoplanet Gliese 682 c</h3>
-                    </div>
+ <span class="span6">Patrice Lerochereuil</span>
                 </div>
 
                 <div class="item item--style-8" data-animation-path-duration="2000" data-animation-path-easing="easeInOutQuart" data-morph-path="M 30.03,240.4 C 31.35,186.2 39.67,120 85.95,86.14 162.5,30.12 302,3.296 378.7,59.08 413.1,84.14 383.6,140 395.1,178.8 411.6,234.4 477.8,280.7 469.5,337.7 462.6,384.1 420.9,429 373.8,447.7 286.1,482.5 161.8,482.4 87.79,427 33.04,386 28.46,305 30.03,240.4 Z" data-path-scaleX="1.1" data-path-scaleY="1.1" data-animation-image-duration="2300" data-animation-image-easing="easeInOutQuart" data-image-scaleX="1.3" data-image-scaleY="1.3" data-image-translateY="-60" data-animation-deco-duration="2000" data-animation-deco-easing="easeInOutQuart" data-deco-scaleX="1.1" data-deco-scaleY="1.1" data-deco-rotate="-15">
